B&L QA/objects/Additional_Product_Complaint_Contact__c.object
<CustomObject>
    <description>Junction object that enables many-to-many relationship between Additional Contacts (Person Accounts) and Product Complaints (Cases)</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <formula>If( Additional_Contact__r.IsPersonAccount,  Additional_Contact__r.FirstName &amp; &quot; &quot; &amp; Additional_Contact__r.LastName,  Additional_Contact__r.Name)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>Additional Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Contacts</relationshipLabel>
        <relationshipName>Additional_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>To be populated from Account as part of the Product Complaint process</description>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>To be populated from Account as part of the Product Complaint process</description>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUSTR</fullName>
                </value>
                <value>
                    <fullName>BELGM</fullName>
                </value>
                <value>
                    <fullName>BLGRC</fullName>
                </value>
                <value>
                    <fullName>BLUSA</fullName>
                </value>
                <value>
                    <fullName>CANAD</fullName>
                </value>
                <value>
                    <fullName>DMBLV</fullName>
                </value>
                <value>
                    <fullName>FRANC</fullName>
                </value>
                <value>
                    <fullName>ITACM</fullName>
                </value>
                <value>
                    <fullName>NETPR</fullName>
                </value>
                <value>
                    <fullName>NORDK</fullName>
                </value>
                <value>
                    <fullName>NORFI</fullName>
                </value>
                <value>
                    <fullName>NORNO</fullName>
                </value>
                <value>
                    <fullName>NORSE</fullName>
                </value>
                <value>
                    <fullName>PHMUS</fullName>
                </value>
                <value>
                    <fullName>POLND</fullName>
                </value>
                <value>
                    <fullName>PORTU</fullName>
                </value>
                <value>
                    <fullName>SPACM</fullName>
                </value>
                <value>
                    <fullName>SWICM</fullName>
                </value>
                <value>
                    <fullName>UNKGD</fullName>
                </value>
                <value>
                    <fullName>VCUCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CATSWeb_Complaint_Number__c</fullName>
        <description>For Product Complaints</description>
        <formula>Case__r.CATSWeb_Complaint_Number__c</formula>
        <label>CATSWeb Complaint Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ID_18__c</fullName>
        <description>Brings in the 18-character Case ID for use in the outbound messages, since the Case__c field only provides the 15-character ID.</description>
        <formula>Case__r.ID_18__c</formula>
        <label>Case ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>For Product Complaints, need to store the value here for use on the mail merge and email templates</description>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>For Product Complaints, the record type so that it can be output on Mail Merge letters</description>
        <formula>Case__r.Record_Type__c</formula>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Additional Contacts</relationshipLabel>
        <relationshipName>Case_Additional_Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name for the Additional Contact (where applicable)</description>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Hospital / Surgery Center</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States of America</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Faroe Islands</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Gibraltar</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Kazakstan</fullName>
                </value>
                <value>
                    <fullName>Kosovo</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Assigned_To__c</fullName>
        <description>For Product Complaints</description>
        <formula>Case__r.Employee_Assigned_To__c</formula>
        <label>Employee Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>For product complaints, a fax number for the Addl Contact</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <description>Brings in the 18-character ID for use in the outbound messages, since the ID field only provides the 15-character ID.</description>
        <formula>Id&amp;
CASE(
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,3),1)),4,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,4),1)),8,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,5),1)),16,0),
0,&quot;A&quot;,1,&quot;B&quot;,2,&quot;C&quot;,3,&quot;D&quot;,4,&quot;E&quot;,5,&quot;F&quot;,6,&quot;G&quot;,7,&quot;H&quot;,8,&quot;I&quot;,
9,&quot;J&quot;,10,&quot;K&quot;,11,&quot;L&quot;,12,&quot;M&quot;,13,&quot;N&quot;,14,&quot;O&quot;,15,&quot;P&quot;,16,&quot;Q&quot;,17,&quot;R&quot;,
18,&quot;S&quot;,19,&quot;T&quot;,20,&quot;U&quot;,21,&quot;V&quot;,22,&quot;W&quot;,23,&quot;X&quot;,24,&quot;Y&quot;,25,&quot;Z&quot;,26,&quot;0&quot;,
27,&quot;1&quot;,28,&quot;2&quot;,29,&quot;3&quot;,30,&quot;4&quot;,31,&quot;5&quot;,&quot;0&quot;)&amp;
&quot;A&quot;&amp;
CASE(
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,11),1)),1,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,12),1)),2,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,13),1)),4,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,14),1)),8,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,15),1)),16,0),
0,&quot;A&quot;,1,&quot;B&quot;,2,&quot;C&quot;,3,&quot;D&quot;,4,&quot;E&quot;,5,&quot;F&quot;,6,&quot;G&quot;,7,&quot;H&quot;,8,&quot;I&quot;,
9,&quot;J&quot;,10,&quot;K&quot;,11,&quot;L&quot;,12,&quot;M&quot;,13,&quot;N&quot;,14,&quot;O&quot;,15,&quot;P&quot;,16,&quot;Q&quot;,17,&quot;R&quot;,
18,&quot;S&quot;,19,&quot;T&quot;,20,&quot;U&quot;,21,&quot;V&quot;,22,&quot;W&quot;,23,&quot;X&quot;,24,&quot;Y&quot;,25,&quot;Z&quot;,26,&quot;0&quot;,
27,&quot;1&quot;,28,&quot;2&quot;,29,&quot;3&quot;,30,&quot;4&quot;,31,&quot;5&quot;,&quot;0&quot;)</formula>
        <label>ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Email__c</fullName>
        <description>Stores the Email address of the current user so that it can be sent with the outbound message for error messages</description>
        <formula>LastModifiedBy.Email</formula>
        <label>Last Modified By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <description>For product complaints, a second phone number for the Addl Contact</description>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Replacement__c</fullName>
        <description>For Product Complaints, this field holds the value of the Product Replacement field from the related Case so that it can be output to mail merge letters.</description>
        <formula>Case__r.Product_Replacement__c</formula>
        <label>Product Replacement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Edit_Prior_Value__c</fullName>
        <description>Stores the prior value of Reason for Edit for use after the Reason for Edit field is blanked</description>
        <label>Reason for Edit Prior Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Edit__c</fullName>
        <description>For product complaints, all edits of fields must be give a Reason</description>
        <label>Reason for Edit</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Record Type Name used in the integration to CATSWeb for product complaints.</description>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_to_CATSWeb__c</fullName>
        <label>Send to CATSWeb</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Used to create a new person account, or be populated from an existing person of business account as part of the Product Complaint process</description>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Todays_Date_EN_CA__c</fullName>
        <formula>Case__r.Todays_Date_EN_CA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Todays Date EN CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Todays_Date_EN_UK__c</fullName>
        <formula>Case__r.Todays_Date_UK__c</formula>
        <label>Todays Date EN UK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Todays_Date_EN_US__c</fullName>
        <formula>Case__r.Todays_Date_EN_US__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Todays Date EN US</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Todays_Date_FR_CA__c</fullName>
        <formula>Case__r.Todays_Date_FR_CA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Todays Date FR CA</label>
        <type>Text</type>
    </fields>
    <label>Additional Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Additional Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Contacts</pluralLabel>
    <recordTypes>
        <fullName>Additional_Product_Complaint_Contact</fullName>
        <active>true</active>
        <description>Editable Additional Product Complaint Contact</description>
        <label>Additional Product Complaint Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_SU_Additional_Contact</fullName>
        <active>true</active>
        <description>Record type for EMEA Surgical Product Complaint Additional Contact</description>
        <label>EMEA SU Additional Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_SU_Additional_Contact</fullName>
        <active>true</active>
        <description>Record type for NA Surgical Product Complaint Additional Contact</description>
        <label>NA SU Additional Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ProductComplaintAddlContact_CaseClosed</fullName>
        <active>true</active>
        <description>If the related Case is closed, do not allow changes to the connection between the Additional Contact (Account) and the Case.  The Additional Contact itself can still be modified.</description>
        <errorConditionFormula>and( 
  $User.Profile__c &lt;&gt; &quot;BL: Integration User&quot;, 
  IsPickVal(Case__r.Status, &quot;Closed&quot;),
  NOT(IsNull(Case__r.Complaint_Action_ID__c))
)</errorConditionFormula>
        <errorMessage>Once a Product Complaint has been closed, no additional changes may be made. The Product Complaint can be reopened in CATSWeb.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductComplaintAddlContact_PhoneTooLong</fullName>
        <active>true</active>
        <description>For Product Complaints, CATSWeb only accepts 30 characters for Phone</description>
        <errorConditionFormula>LEN( Phone__c ) &gt; 30</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>This field can only contain 30 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductComplaint_NASU_AddCntct_RFE</fullName>
        <active>true</active>
        <description>For Product Complaints, once the related Case has been sent to CW, all edits must have a Reason for Edit.</description>
        <errorConditionFormula>and (
  Not($User.Profile__c = &quot;BL: Integration User&quot;),
  Not(IsNew()),
  Case__r.CATSWeb_Complaint_Number__c &lt;&gt; &quot;&quot;,
  Reason_for_Edit_Prior_Value__c = &quot;&quot;
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Edit__c</errorDisplayField>
        <errorMessage>All changes to Additional Contacts require a Reason for Edit once the Product Complaint has been sent to CATSWeb.</errorMessage>
    </validationRules>
</CustomObject>